--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -27,8 +27,6 @@ for different hardware and product builds. -->
     <bool name="config_allowAllRotations">true</bool>
     <bool name="config_sf_limitedAlpha">false</bool>
 
-    <string name="config_legacyUmsLunFile">/sys/devices/platform/msm_hsusb/gadget/lun0/file</string>
-
     <!-- Amount of time it takes for the light sensor to warm up in milliseconds.
 For this time after the screen turns on, the Power Manager
 will not debounce light sensor readings -->
@@ -41,9 +39,15 @@ will not debounce light sensor readings -->
     <string name="config_geocodeProviderPackageName">com.google.android.location</string>
 
 
+    
+    <!-- List of regexpressions describing the interface (if any) that represent tetherable
+         USB interfaces.  If the device doesn't want to support tething over USB this should
+         be empty.  An example would be "usb.*" -->
     <string-array translatable="false" name="config_tether_usb_regexs">
         <item>"rndis\\d"</item>
+	<item>"usb\\d"</item>
     </string-array>
+
     <integer-array translatable="false" name="config_tether_upstream_types">
         <item>0</item>
         <item>1</item>
